<resources>
    <string name="app_name">NaviTest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">user</string>
    <string name="nav_header_subtitle">email address</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">home</string>
    <string name="menu_description">description</string>
    <string name="menu_top5">top5</string>
    <string name="menu_date">date</string>
    <string name="menu_setting">setting</string>

</resources>