<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_description"
            android:title="@string/menu_description" />
        <item
            android:id="@+id/nav_top5"
            android:icon="@drawable/a3"
            android:title="@string/menu_top5" />
        <item
            android:id="@+id/nav_date"
            android:icon="@drawable/a4"
            android:title="@string/menu_date" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/a5"
            android:title="@string/menu_setting" />
    </group>
</menu>